# tauri-plugin-safe-area-insets-css

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
.github/workflows/: npm-publish-github-packages.yml  publish-crate.yml
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: Example.kt  ExamplePlugin.kt  InsetPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift  InsetPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
