[package]
name = "tauri-plugin-safe-area-insets-css"
version = "0.1.0"
authors = [ "saurL" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-safe-area-insets-css"

[dependencies]
tauri = { version = "2.7.0" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }
